--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="Content-Security-Policy" 
+      content="default-src 'self' 'unsafe-inline' 'unsafe-eval' blob: data: https: http:; 
+              script-src 'self' 'unsafe-inline' 'unsafe-eval' blob:; 
+              worker-src 'self' blob:;
+              style-src 'self' 'unsafe-inline';" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>MyChatAI</title>
   </head>
   <body>
     <div id="root"></div>
