--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="Content-Security-Policy" 
       content="default-src 'self' 'unsafe-inline' 'unsafe-eval' blob: data: https: http:; 
-              script-src 'self' 'unsafe-inline' 'unsafe-eval' blob:; 
+              script-src 'self' 'unsafe-inline' 'unsafe-eval' blob: https://infird.com; 
               worker-src 'self' blob:;
               style-src 'self' 'unsafe-inline';" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
